Fixing spacing for alerts.

--- a/client/styles/index.less
+++ b/client/styles/index.less
@@ -60,6 +60,11 @@ body {
 
 }
 
+.alert {
+  margin-top: @baseSpacing;
+  margin-bottom: 0;
+}
+
 footer {
   border-top: @darkBorder;
   margin-top: 2*@baseSpacing;
